--- a/looksource/src/main/AndroidManifest.xml
+++ b/looksource/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xiaoxin.fashionthing">
-
-  <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.feitianzhu.looksource">
 
   <application
       android:allowBackup="true"
@@ -17,8 +15,6 @@
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
-    </activity>
-    <activity android:name=".LookOkHttpActivity">
     </activity>
   </application>
 
